--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "php-ffmpeg/php-ffmpeg": "*"
+        "php-ffmpeg/php-ffmpeg": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
